# tarseem

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: baselines.yml  ci.yml  drawio-roundtrip.yml
docs/: backlog.md  phase-7-acceptance-audit.md  pptx-manual-checklist.md
docs/adr/: ADR-001-schema-compiler-one-ir-many-writers.md  ADR-002-layout-elk-subprocess-lane-grid-swimlane.md  ADR-003-rendering-own-svg-playwright-chromium.md  ADR-004-arabic-rtl-first-class.md  ADR-005-editable-exports-as-writers-capability-reports.md  ADR-006-libavoid-optional-wasm-rerouter.md  ADR-007-drawio-swimlane-explicit-cells-not-native.md  ADR-008-diagram-types-as-entry-point-plugins.md  ADR-009-schema-v1-freeze.md
docs/extending/: clone-a-type.md
docs/guide/: agents.md  exports.md  families.md  limitations.md  powerpoint.md  quickstart.md  rtl-arabic.md  troubleshooting.md
docs/plan/: 00-executive-summary.md  01-requirements.md  02-risks.md  03-engine-comparison.md  04-architecture.md  05-schema-strategy.md  06-layout-routing-strategy.md  07-rtl-arabic-strategy.md  08-export-strategy.md  09-testing-gallery-strategy.md  10-documentation-plan.md  11-phased-plan.md  12-acceptance-criteria.md  13-open-decisions.md  README.md
docs/prompts/: initial-prompt.md
docs/spikes/: bug-report-progress.md  phase-0-summary.md  phase-2-progress.md  phase-3-progress.md  phase-4-progress.md  phase-5-progress.md  phase-6-progress.md  phase-7-progress.md  spike-1-report.md  spike-2-report.md  spike-3-report.md  spike-4-report.md  spike-5-report.md  spike-6-report.md
examples/: README.md  activity-order-approval.json  arabic-architecture.json  arabic-flowchart.json  arabic-mixed.json  architecture.json  class-shapes.json  class-shop.json  dependency.json  deployment-web-stack.json  er-shop.json  flowchart.json  mindmap-arabic.json  mindmap-roadmap.json  mindmap-skills-radial.json  sequence-login.json  state-order-lifecycle.json  swimlane-bug-triage.json  swimlane-document-rtl.json  swimlane-nested-delivery.json  swimlane-phases.json  swimlane-pipeline.json  swimlane-tuned.json  swimlane-vertical-release.json
examples/plugins/incident-flow/: README.md  example.json  pyproject.toml
examples/plugins/incident-flow/tarseem_incident_flow/: __init__.py
examples/plugins/timeline/: README.md  example.json  pyproject.toml
examples/plugins/timeline/tarseem_timeline/: __init__.py
scripts/: bench_raster.py  gen_showcase.py  regen_baselines.py
tests/: test_a10_sequence.py  test_a11_doctor.py  test_a12_swimlane.py  test_a1_validation.py  test_a2_render.py  test_a3_determinism.py  test_a4_api.py  test_a5_styling.py  test_adapter_contract.py  test_agent_surface.py  test_arabic_rtl.py  test_browser_pool.py  test_build_review_locked.py  test_compare_png_equivalence.py  test_docs.py  test_e2e_gallery.py  test_export_drawio.py  test_export_pdf.py  test_export_pptx.py  test_export_reports.py  test_external_plugin_incident_flow.py  test_external_plugin_timeline.py  test_family_activity.py  test_family_class.py  test_family_er.py  test_family_mindmap.py  test_family_state_deployment.py  test_gallery.py  test_geometry.py  test_layout_options.py  test_libavoid_router.py  test_phases.py  test_plugin_registry.py  test_reference_contract.py  test_render_report.py  test_review_fixes.py  test_routing_benchmark.py  test_routing_hints.py  test_schema_freeze.py  test_skill_integration.py  (+5 more)
tools/: build_review.py  refactor_guard.py  verify_drawio.py
(+111 files in other folders)
