[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tarseem"
version = "0.0.0"
description = "Schema-driven Python diagram engine: validated JSON specs to architecture-grade diagrams."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anas Hammo" }]
keywords = ["diagrams", "svg", "elk", "swimlane", "arabic", "rtl", "drawio", "pptx"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "jsonschema>=4.21",
  "uharfbuzz>=0.55",
  "fonttools[woff]>=4.63",
  "brotli>=1.2",
  "playwright>=1.60",
  "lxml>=6.1",
  "python-pptx>=1.0",
  "defusedxml>=0.7",
]

[project.optional-dependencies]
graphviz = ["graphviz>=0.20"]
kroki = ["requests>=2.31"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "build>=1.2"]

[project.scripts]
tarseem = "tarseem.cli:main"

# Built-in diagram-type plugins register here in Phase 2 (dogfood the public plugin API; ADR-002, invariant #8).
[project.entry-points."tarseem.types"]

[project.urls]
Homepage = "https://github.com/AnasHammo/tarseem"

[tool.hatch.build.targets.wheel]
packages = ["src/tarseem"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# spikes/ is throwaway Phase-0 code, excluded from packaging and from linting.
extend-exclude = ["spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["tarseem"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
